<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">MarketAccess</string>

  <string name="actual">Settings</string>
  <string name="settings">Providers</string>
  <string name="custom">Custom</string>

  <string name="applied">Emulation successful</string>
  <string name="error">Emulation error</string>
  <string name="no_root">You need root (superuser) to use this application. It looks like \"su\" is not available on
    your device.\n\nPlease root your phone and ensure that \"su\" works fine.
  </string>
  <string name="no_root_ok">OK, I understand</string>
  <string name="working">Working...</string>

  <string name="restoring">Restoring saved value</string>
  <string name="emulating">Emulating custom provider</string>
  <string name="emulate">Emulate \"%1$s\" (%2$s) SIM?</string>
  <string name="emulating_name">Emulating SIM: %1$s</string>

  <string name="boot_emulation_off">Boot emulation disabled</string>
  <string name="boot_emulation_for">Boot emulation for \"%1$s\"</string>

  <string name="show_notification">Show notification</string>
  <string name="emulate_on_boot">Emulate on boot</string>

  <string name="backup">Backup value</string>
  <string name="backup_ok">SIM numeric \"%1$s\" saved</string>
  <string name="restore">Restore value</string>
  <string name="confirm_restore">Do you want to restore \"%1$s\"?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="nothing">nothing</string>
  <string name="about_1">MarketAccess is a fork of MarketEnabler 3.0.8 (by vekexasia and rac).</string>
  <string name="about_2">Changes include no ads, new features and optimized, almost rewritten from scratch code.
  </string>

  <string name="boot_warning">Please note that emulating a provider may affect other applications. In case
    you\'ll have any issues, disable emulation on boot and enable it manually when you want to buy from Market. Do
    you still want to emulate on boot?
  </string>
  <string name="set_to_this">Set to this value</string>
  <string name="numeric">SIM numeric:</string>
  <string name="url">http://amip.org.ru/android/MarketAccess</string>

  <string name="force_location">Force install location (2.2+ only)</string>
  <string name="install_location">Install location</string>
  <string name="msg_loc">Setting location</string>
  <string name="msg_loc_failed">Setting location failed</string>
</resources>
