<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/actualsettings"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  >
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="5px"
    android:paddingRight="5px">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="horizontal"
      android:layout_marginTop="15px"
      android:layout_marginBottom="15px">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="gsm.sim.operator.numeric"
        />
      <TextView
        android:id="@+id/actualsimNumericValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:layout_marginLeft="20px"/>
    </LinearLayout>
    <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="horizontal"
      android:layout_marginBottom="15px"
      android:stretchColumns="0,1">
      <TableRow>
        <Button
          android:id="@+id/buttonSave"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/backup"/>
        <Button
          android:id="@+id/buttonRestore"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/restore"/>
      </TableRow>
    </TableLayout>
    <CheckBox
      android:id="@+id/bootCheckbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/emulate_on_boot"/>
    <CheckBox
      android:id="@+id/notificationCheckbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/show_notification"/>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30px"
      android:text="@string/about_1"
      />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10px"
      android:text="@string/about_2"
      />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15px"
      android:gravity="center"
      android:text="http://amip.org.ru/wiki/android/MarketAccess"
      />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="© CrazyCoder, 2010"
      />
  </LinearLayout>
</ScrollView>
